style.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

body {
  background-color: hsl(0, 0%, 100%);
  font-family: "Public Sans", sans-serif;
}

p {
  color: hsl(233, 8%, 62%);
}

h1{
  font-size: 2.5rem;
}

h2{
  font-size: 2.2rem;
}

h4{
  font-size: 1.5rem;
}

h1, h2, h4 {
  color: hsl(233, 8%, 30%);
  padding-bottom: 20px;
  font-weight: 300;
}

ul {
  list-style: none;
}

a, a:visited {
  text-decoration: none;
  cursor: pointer;
  color: hsl(0, 0%, 100%);
}

a:hover{
  cursor: pointer;
}

section {
  padding-top: 100px;
  min-height: 600px;
  max-height: 800px;
  max-width: 1400px;
}

.container {
  padding-left: 150px;
  height: 100%;
}

/************************************************Header Section************************************************/

header {
    background-color: hsl(0, 0%, 100%);
    /* height: 20vh; */
    min-height: 120px;
}

header > .container {
  position: relative;
  width: 100%;
  /* height: 100%; */
  display: inline-block;
  padding: 20px 0;
}

.logo {
  height: 80px;
  line-height: 80px;
  text-align: center;
}

header .logo {
  position: absolute;
  padding-left: 150px;
}

nav {
  position: absolute;
  text-align: center;
  height: 80px;
  line-height: 80px;
  width: 400px;
  margin: auto;
  left: 50%;
  transform: translateX(-50%);
}

/* nav > ul{
    list-style: none;
} */

nav > ul > li {
  display: inline-block;
  padding: 0 15px;
  margin: 0;
}

nav > ul > li:hover {
  /* border-radius: 5px;
    border-bottom-style: solid  linear-gradient(45deg, hsl(136, 65%, 51%), hsl(192, 70%, 51%)); */
  /* border: 5px solid transparent;
    border-image: linear-gradient(45deg, hsl(136, 65%, 51%), hsl(192, 70%, 51%)); */
    color: hsl(233, 26%, 24%);
}

nav a , nav a:visited{
  color: hsl(233, 8%, 62%);
}

.invite-link {
  position: absolute;
  right: 150px;
}

.invite-button {
  color: hsl(0, 0%, 100%);
  line-height: 80px;
  text-align: center;
  padding: 15px 25px;
  background: linear-gradient(45deg, hsl(136, 65%, 51%), hsl(192, 70%, 51%));
  border-radius: 25px 25px;
}



/************************************************Showcase Section************************************************/
#showcase {
  background-color: hsl(225, 20%, 96.1%);
  position: relative;
  /* height: 600px; */
  z-index: -1;
  /* padding-top: 50px; */
  height: 80vh;
}

/* #showcase > .container{
    display: inline-block;
} */

#showcase .message {
  position: absolute;
  left: 10%;
  top: 50%;
  width: 25%;
  transform: translateY(-50%);
  padding-top: 100px;
  color: hsl(233, 8%, 62%);
}

.message p {
  /* color: hsl(233, 8%, 62%); */
  margin: 20px 0;
}

#showcase .images {
  position: absolute;
  right: 0;
  top: 0;
  width: 65%;
  height: 400px;
  padding-top: 100px;
  background-size: cover;
  background-repeat: no-repeat;
  /* z-index: -1; */
}

.images > .image-back {
  /* display: inline-block; */
  height: 850px;
  width: 100%;
  position: absolute;
  top: -250px;
  right: 0px;
  /* background-size: cover;
  background-repeat: no-repeat; */
  background-image: url("images/bg-intro-desktop.svg");
  z-index: -1;
}

.images > .image-front {
  position: absolute;
  height: 900px;
  top: -120px;
  right: 0;
  width: 650px;
  /* background-size: cover;
  background-repeat: no-repeat; */
  background-image: url("images/image-mockups.png");
}



/************************************************Feature Section************************************************/
#feature {
  background-color: hsl(221, 35%, 85%);
  position: relative;
  z-index: -2;
  padding: 150px 0 50px 0;
  height: 700px;
}

#feature .container > p{
  width: 50%;
}

.feature-cards{
  display: inline-block;
  padding-top: 100px;
  padding-right: 100px;
  /* text-align: start;   */
}

.feature-card{
  /* padding: 50px 0; */
  width: 25%;
  float: left;
}

.feature-card p{
  padding-right: 40px;
  font-size: 0.95rem;
}


.feature-card-icon{
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  width: 100px;
  height: 100px;
  padding: 40px 0;
}

.icon-banking{
  background-image: url('images/icon-online.svg');
}

.icon-budgeting{
  background-image: url('images/icon-budgeting.svg');
}

.icon-onboarding{
  background-image: url('images/icon-onboarding.svg');
}

.icon-api{
  background-image: url('images/icon-api.svg');
}


/************************************************Newsletter Section************************************************/

#newsletter{
  padding-bottom: 20px;
  height: 700px;
  background-color: hsl(225, 20%, 96.1%);
}
.articles{
  display: inline-block;
}
.article-card{
  width: 20%;
  height: 510px;
  margin: 0 10px;
  float: left;
  background-color: hsl(0, 0%, 100%);
}

.article-card-image{
  height: 200px;
  background-size: cover;
  margin-bottom: 30px;
  /* background-position: center; */
}

.article-card-image-1{
  background: url('images/image-currency.jpg') no-repeat;
}

.article-card-image-2{
  background: url('images/image-restaurant.jpg') no-repeat;
}

.article-card-image-3{
  background: url('images/image-plane.jpg') no-repeat;
}

.article-card-image-4{
  background: url('images/image-confetti.jpg') no-repeat;
}

.article-card p, .article-card h4{
  padding: 10px 15px;
}

.article-card h4:hover{
  color: hsl(192, 70%, 51%);
}
.article-card p.article-author{
  
  font-size: 0.75rem;
  margin-bottom: 10px;
}

/************************************************Footer Section************************************************/
footer {
  background-color: hsl(233, 26%, 24%);
  color: hsl(0, 0%, 100%);
  height: 250px;
  width: 100%;
  display: inline-block;
  padding-top: 40px;
}

.left-footer{
  float: left;
  width: 30%;
}

footer .logo {
  
  text-align: left;
  margin-bottom: 20px;
}


.left-footer .icon{
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  width: 20px;
  height: 20px;
  display: inline-block;
  margin: 0 5px;
}

.left-footer .icon a:hover{
  color: hsl(136, 65%, 51%);
}
.left-footer .icon-facebook{
  background-image: url("images/icon-facebook.svg");
}
.left-footer .icon-youtube{
  background-image: url("images/icon-youtube.svg");
}
.left-footer .icon-twitter{
  background-image: url("images/icon-twitter.svg");
}
.left-footer .icon-pinterest{
  background-image: url("images/icon-pinterest.svg");
}
.left-footer .icon-instagram{
  background-image: url("images/icon-instagram.svg");
}

.middle-footer{
  float: left;
  width: 30%;
}

.middle-footer ul{
  width: 300px;
  height: 200px;
  columns: 2;
}

.middle-footer li{
  display: inline-block;
  padding: 20px 10px;
  width: 150px;
}



footer img:hover, footer a:hover{
  color: hsl(136, 65%, 51%);
}

.right-footer{
  float: right;
  width: 40%;
}

